dockerfile, dynamic websocket client config, db migration on startup